objects/Comment__c.object
<CustomObject>
    <fields>
        <fullName>BA_Comment__c</fullName>
        <formula>Partner_Business_Terms_and_Conditions__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BA Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <formula>TEXT(CreatedBy.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_comment__c</fullName>
        <formula>Partner_Application__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PA comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Comment__c</fullName>
        <formula>Partner_Contract__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Application_Owner_Email__c</fullName>
        <formula>IF( ISBLANK( Owner:User.Id ), Owner:Queue.QueueEmail, Owner:User.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Application Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipName>Application_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Terms_and_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Business Terms and Conditions</label>
        <referenceTo>Partner_Business_Terms_and_Conditions__c</referenceTo>
        <relationshipName>Application_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contract</label>
        <referenceTo>Partner_Contract__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Partner_Application__r.For_User__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_Notification_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification To Customer?</label>
        <type>Checkbox</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>